styling fixes to images being distorted

--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -125,6 +125,7 @@ strong {
   .card__image {
     width: 100%;
     height: 30rem;
+    object-fit: cover;
     cursor: pointer; }
   .card__tag {
     position: absolute;
@@ -189,10 +190,11 @@ strong {
     cursor: pointer; }
   .card__user-image {
     width: 6rem;
-    width: 6rem;
+    height: 6rem;
     flex: 0 0 6rem;
     border-radius: 100%;
-    margin-right: 0.5rem; }
+    margin-right: 1rem;
+    object-fit: cover; }
   .card__user-info {
     flex: 1;
     display: flex;
@@ -369,8 +371,10 @@ strong {
   font-size: 1.6rem; }
 
 .form__user-photo {
-  height: 10rem;
-  width: 10rem;
+  height: 8rem;
+  width: 8rem;
+  border-radius: 100%;
+  object-fit: cover;
   margin-right: 2rem; }
 
 .form__useraccount-block {
@@ -618,7 +622,8 @@ strong {
     height: 4rem;
     width: 4rem;
     border-radius: 100%;
-    margin-right: 1rem; }
+    margin-right: 1rem;
+    object-fit: cover; }
   .nav__el {
     color: #f7f7f7;
     text-transform: uppercase;
