--- a/client/src/assets/sass/components/_card.scss
+++ b/client/src/assets/sass/components/_card.scss
@@ -10,6 +10,7 @@
     &__image {
         width: 100%;
         height: 30rem;
+        object-fit: cover;
         cursor: pointer;
     }
     &__tag {
@@ -88,10 +89,11 @@
     }
     &__user-image {
         width: 6rem;
-        width: 6rem;
+        height: 6rem;
         flex: 0 0 6rem;
         border-radius: 100%;
-        margin-right: 0.5rem;
+        margin-right: 1rem;
+        object-fit: cover;
     }
     &__user-info {
         flex: 1;
