--- a/client/src/assets/sass/components/_form.scss
+++ b/client/src/assets/sass/components/_form.scss
@@ -118,8 +118,10 @@
         font-size: 1.6rem;
     }
     &__user-photo {
-        height: 10rem;
-        width: 10rem;
+        height: 8rem;
+        width: 8rem;
+        border-radius: 100%;
+        object-fit: cover;
         margin-right: 2rem;
     }
     &__useraccount-block {
