--- a/client/src/assets/sass/layout/_navigation.scss
+++ b/client/src/assets/sass/layout/_navigation.scss
@@ -12,6 +12,7 @@
         width: 4rem;
         border-radius: 100%;
         margin-right: 1rem;
+        object-fit: cover;
     }
     &__el {
         color: $light-grey;
